[93] implement updateEvent, add EventDateDtoMapper, EventUpdateRequestDtoMapper, refactor EventCreateRequestDtoMapper