@@ -1,18 +1,19 @@
 package greencity.mapping.event;
 
 import greencity.dto.event.EventCreateRequestDto;
-import greencity.dto.event.EventDateDto;
 import greencity.entity.User;
 import greencity.entity.event.Event;
 import greencity.entity.event.EventDate;
-
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
+@RequiredArgsConstructor
 public class EventCreateRequestDtoMapper {
+
+    private final EventDateDtoMapper eventDateDtoMapper;
 
     public Event toEntity(EventCreateRequestDto dto, User organizer) {
         Event event = new Event();
@@ -28,20 +29,11 @@ public class EventCreateRequestDtoMapper {
         event.setOnlineLink(dto.getOnlineLink());
 
         List<EventDate> eventDates = dto.getDates().stream()
-                .map(this::toEventDate)
-                .collect(Collectors.toList());
+                .map(eventDateDtoMapper::toEntity)
+                .toList();
         eventDates.forEach(date -> date.setEvent(event));
         event.setDates(eventDates);
 
         return event;
-    }
-
-    private EventDate toEventDate(EventDateDto dateDto) {
-        EventDate eventDate = new EventDate();
-        eventDate.setDate(dateDto.getDate());
-        eventDate.setStartTime(dateDto.getStartTime());
-        eventDate.setEndTime(dateDto.getEndTime());
-        eventDate.setAllDay(dateDto.isAllDay());
-        return eventDate;
     }
 }
